# sage-triples

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
src/: graph.rs  lib.rs  main.rs  triples.rs
tests/: graph.rs  triples.rs
